--- a/styles/style.css
+++ b/styles/style.css
@@ -41,25 +41,40 @@ html, body {
 }
 
 
-.card-header {
+.widget {
+  border-radius: 4px;
+  min-height: 300px;
+}
+
+.widget-header {
+    border-radius: 2px;
     background-color: dodgerblue;
     color: white;
+    padding: .5rem;
+}
+
+.widget-block {
+  padding: .5rem;
+}
+
+.widget-outline {
+  border: 1px solid dodgerblue;
 }
 
 .widget-box-area {
   padding-top: 20px;
 }
 
-.widget-box {
+/*.widget-box {
   background-color: gainsboro;
   padding: 10px;
   min-height: 300px;
-  /*max-height: auto;*/
-  /*max-height: 500px;*/
+  max-height: auto;
+  max-height: 500px;
   overflow: auto;
   margin-bottom: 20px;
 
-}
+}*/
 
 .image-width {
   max-width: 100%;
