--- a/styles/style.css
+++ b/styles/style.css
@@ -40,10 +40,11 @@ html, body {
     
 }
 
-
+/* Widget styles -- Widgets have been used primarily on the homepage instead of cards
+	This is to accomplish fixed height and other minor style elements. Other pages have used cards instead.
+*/
 .widget {
   border-radius: 4px;
-  min-height: 300px;
 }
 
 .widget-header {
@@ -61,11 +62,16 @@ html, body {
   border: 1px solid dodgerblue;
 }
 
+.widget-height {
+	min-height: 300px;
+}
+
 .widget-box-area {
   padding-top: 20px;
 }
 
-/*.widget-box {
+/*
+.widget-box {
   background-color: gainsboro;
   padding: 10px;
   min-height: 300px;
@@ -74,7 +80,15 @@ html, body {
   overflow: auto;
   margin-bottom: 20px;
 
-}*/
+}
+*/
+
+
+/* Style override for bootstrap's built-in card elements */
+
+.card-header {
+	background-color: pink;
+}
 
 .image-width {
   max-width: 100%;
