--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,12 @@ table td {
   font-size: 12px;
 }
 
+/* Blog page style */
 
+.blog-cards {
+	max-height: 350px;
+	overflow: hidden;
+}
 
 /* Bootstrap Overrides */
 
